Better detection of the count method (and support for singleton pointers)