@@ -9,9 +9,9 @@ public class CommonData {
     public static final List<String> KNOWN_ATOMS =  List.of("XrPath");
     public static final List<String> KNOWN_TYPEDEF_INTS = Collections.emptyList();
     public static final List<String> KNOWN_TYPEDEF_LONGS = Collections.emptyList();
-    public static final List<String> KNOWN_HANDLES = Collections.emptyList();
+    public static final List<String> KNOWN_HANDLES = List.of("XrActionSet");
     public static final List<String> KNOWN_FLAGS = List.of("XrDebugUtilsMessageSeverityFlagsEXT", "XrDebugUtilsMessageTypeFlagsEXT", "XrInstanceCreateFlags");
-    public static final List<String> KNOWN_STRUCTS = List.of("XrActiveActionSet", "XrApplicationInfo", "XrVector2f");
+    public static final List<String> KNOWN_STRUCTS = List.of("XrActiveActionSet", "XrApplicationInfo", "XrVector2f", "XrHapticBaseHeader");
 
     /**
      * This is NOT all the structs, this is all the non-abstract structs.
